# clipmind

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
android/: README.md
android/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/android/app/: build.gradle.kts
android/android/app/src/main/: AndroidManifest.xml
android/android/app/src/main/java/com/clipmind/app/: ClipMindApp.kt  MainActivity.kt
android/android/app/src/main/java/com/clipmind/app/core/domain/: DataError.kt  Result.kt
android/android/app/src/main/java/com/clipmind/app/core/presentation/: DataErrorMapper.kt  ObserveAsEvents.kt  UiText.kt
android/android/app/src/main/java/com/clipmind/app/data/local/: ClipMindDatabase.kt  VideoDao.kt  VideoEntity.kt  (+1 more)
android/android/app/src/main/java/com/clipmind/app/di/: AppModule.kt
android/android/app/src/main/java/com/clipmind/app/presentation/: ClipMindNavHost.kt  Routes.kt
android/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/android/app/src/main/res/values/: strings.xml  themes.xml
android/android/app/src/main/res/xml/: network_security_config.xml
android/android/gradle/: libs.versions.toml
backend/: README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: videos.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: s3.py  videos.py
backend/tests/: test_health.py
db/: init.sql
docs/: ARCHITECTURE.md  COMMIT_CONVENTIONS.md
evals/: README.md
evals/corpus/: README.md
web/: README.md
(+10 files in other folders)
